# Civium

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN_RESEAU_PRINCIPAL_WEB.md  README.md  ROADMAP.md  SECURITY.md  STACK.md  TODO.md  VISION.md
.claude/: settings.local.json
.github/workflows/: deploy.yml  mobile.yml  php.yml  rust.yml  tauri.yml  wasm.yml
civium-cli/: Cargo.toml
civium-cli/src/: main.rs  store.rs
civium-core/: Cargo.toml
civium-core/src/: error.rs  lib.rs
civium-core/src/connection/: agreement.rs  mod.rs  record.rs
civium-core/src/crypto/: group_key.rs
civium-core/src/identity/: cid.rs  keypair.rs
civium-core/src/network/: invitation.rs  mod.rs  network.rs
civium-core/src/node/: behaviour.rs  config.rs  mod.rs  protocol.rs
civium-tauri/: index.html  package-lock.json  package.json
civium-tauri/src/: App.tsx  tauri.ts  types.ts
civium-tauri/src-tauri/: Cargo.toml  tauri.conf.json
civium-tauri/src-tauri/icons/: icon.icns
civium-tauri/src-tauri/src/: commands.rs  lib.rs  node.rs  store.rs
civium-tauri/src/screens/: Dashboard.tsx  Onboarding.tsx
desktop/: Cargo.toml  build-wasm.sh  rust-toolchain.toml
desktop/civium-cli/src/: main.rs  store.rs
desktop/civium-core/: Cargo.toml
desktop/civium-core/src/: bootstrap.rs  error.rs  lib.rs  revocation.rs  time.rs  wasm.rs
desktop/civium-core/src/activity/: mod.rs
desktop/civium-core/src/activitypub/: mod.rs
desktop/civium-core/src/agenda/: mod.rs
desktop/civium-core/src/cil/: mod.rs
desktop/civium-core/src/connection/: agreement.rs  record.rs
desktop/civium-core/src/crypto/: group_key.rs  mod.rs
desktop/civium-core/src/directory/: mod.rs
desktop/civium-core/src/document/: mod.rs
desktop/civium-core/src/e2e/: mod.rs
desktop/civium-core/src/governance/: mod.rs
desktop/civium-core/src/identity/: keypair.rs  mod.rs
desktop/civium-core/src/messaging/: mailbox.rs  message.rs  mod.rs
desktop/civium-core/src/minor/: mod.rs
desktop/civium-core/src/network/: invitation.rs  member.rs  mod.rs  network.rs
desktop/civium-core/src/node/: behaviour.rs  config.rs  mod.rs  protocol.rs
desktop/civium-core/src/pairing/: mod.rs
desktop/civium-core/src/plugin/: mod.rs  sandbox.rs
desktop/civium-core/src/rcc/: mod.rs
desktop/civium-ffi/: Cargo.toml
desktop/civium-ffi/src/: lib.rs  store.rs
desktop/civium-sdk/: Cargo.toml
desktop/civium-sdk/src/: client.rs  governance.rs  identity.rs  lib.rs  messaging.rs  network.rs  prelude.rs
desktop/civium-tauri/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/civium-tauri/src/: App.tsx  tauri.ts  types.ts
desktop/civium-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/civium-tauri/src-tauri/capabilities/: default.json
desktop/civium-tauri/src-tauri/src/: ap.rs  commands.rs  lib.rs  main.rs  mcp.rs  node.rs  rcc.rs  root_connect.rs  store.rs
desktop/civium-tauri/src/screens/: Dashboard.tsx  Onboarding.tsx
mobile/: Makefile
mobile/civium-mobile/: App.tsx  package.json  tsconfig.json
mobile/civium-mobile/android/app/src/main/java/com/civium/: CiviumModule.kt  CiviumPackage.kt
mobile/civium-mobile/ios/: CiviumModule.m  CiviumModule.swift
mobile/civium-mobile/src/: types.ts
mobile/civium-mobile/src/native/: CiviumModule.ts
mobile/civium-mobile/src/screens/: MessagesScreen.tsx  NetworksScreen.tsx  OnboardingScreen.tsx  PairingScreen.tsx
scripts/: setup-windows-dev.ps1
website/: .gitignore  .htaccess  .user.ini  civium.sql  composer.json  diag.php  index.php
website/public/: manifest.json
website/public/css/: style.css
website/src/: composer.json
website/src/app/: config.ini
website/src/app/modules/activitypub/controllers/: ActivityPubController.php
website/src/app/modules/civium/controllers/: AdminController.php  AdminNetworkController.php  AppController.php  AuthController.php  NetworkController.php  UpdateController.php  WhiteLabelController.php
website/src/app/modules/civium/views/: admin-login.html  admin-whitelabel.html  admin.html  app.html  auth.html  network-acces-refuse.html  network-dashboard.html  network-identity.html  network-join.html
website/src/app/modules/hub/controllers/: HubController.php
website/src/app/modules/pages/controllers/: PageController.php
website/src/app/modules/pages/views/: contribute.html  home.html  how.html  layout.html  roadmap.html  usecases.html
website/src/app/modules/rcc/controllers/: ApiController.php
website/src/migrations/: 001_initial.sql  002_activitypub.sql  003_hub.sql  004_white_label.sql  005_reseau_principal.sql  006_web_multi_network.sql  007_web_per_network_membership.sql  008_web_invitations_network_id.sql  009_web_messages_network_id.sql  010_web_dm_network_id.sql  011_web_proposals_network_id.sql  012_web_votes_network_id.sql  013_web_directory_network_id.sql  014_web_activity_network_id.sql  015_web_notifications_network_id.sql  016_web_members_email_per_network.sql  017_fix_network_id_varchar.sql  018_hub_main_network.sql  019_hub_governance.sql  020_hub_agenda.sql  021_hub_network_parent.sql  022_web_users_password.sql  023_networks_server_timestamp.sql  024_auth_ip_rate_limit.sql  025_hub_documents.sql  026_hub_dms.sql  027_hub_notifications.sql
website/src/models/: HttpSignature.php  MagicLink.php  Mailer.php  Migration.php
website/src/public/css/: style.css
website/src/public/js/: home.js
website/src/www/: .htaccess  index.html  index.php  sw.js
website/src/www/wasm/: civium_core.d.ts  civium_core.js  civium_core_bg.wasm
website/views/: contribute.php  home.php  how.php  layout.php  roadmap.php  usecases.php
