[workspace]
members  = ["civium-core", "civium-cli", "civium-tauri/src-tauri", "civium-ffi", "civium-sdk"]
exclude  = ["civium-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Civium Contributors"]
license = "AGPL-3.0"

[workspace.dependencies]
tokio       = { version = "1",   features = ["full"] }
thiserror   = "2"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
bs58        = "0.5"
futures     = "0.3"
rand        = "0.8"
uuid        = { version = "1", features = ["v4"] }
anyhow      = "1"
rusqlite    = { version = "0.31", features = ["bundled"] }
