[package]
name    = "civium-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "UniFFI bindings for civium-core — mobile (Android/iOS) via React Native"

[lib]
# cdylib → .so (Android), staticlib → .a (iOS via cargo-lipo)
crate-type = ["cdylib", "staticlib"]

[dependencies]
civium-core = { path = "../civium-core" }
uniffi      = "0.28"
rusqlite    = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
bs58        = { workspace = true }
uuid        = { workspace = true }
