[package]
name    = "civium-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name       = "civium_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
civium-core       = { path = "../../civium-core" }
rusqlite          = { version = "0.31", features = ["bundled"] }
anyhow            = "1"
tokio             = { version = "1", features = ["full"] }
