[package]
name    = "civium-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name       = "civium_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-fs   = "2"
tauri-plugin-deep-link = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
civium-core       = { path = "../../civium-core" }
rusqlite          = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
keyring           = "2"
anyhow            = "1"
tokio             = { version = "1", features = ["full"] }
bs58              = "0.5"
reqwest           = { version = "0.12", features = ["json"] }
uuid              = { version = "1", features = ["v4"] }
base64            = "0.22"
argon2            = "0.5"
chacha20poly1305  = "0.10"
rand              = "0.8"
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
tracing-appender     = "0.2"
chrono               = "0.4"
urlencoding          = "2"
